docs(story-1.2): add authoring workflow notes and mark complete

--- a/docs/stories/1.1.initialize-repo-and-toolchain.md
+++ b/docs/stories/1.1.initialize-repo-and-toolchain.md
@@ -22,16 +22,16 @@ Approved
 
 ## Tasks / Subtasks
 - [x] Scaffold Next.js 14 (App Router) repo with pnpm, TS strict, Tailwind, ESLint/Prettier (AC: local build/dev)
-  - [ ] Initialize Next.js app; configure TS strict and project refs if needed
-  - [ ] Add Tailwind; wire `globals.css` and tokens
-  - [ ] Configure ESLint + Prettier per repo standards
-- [ ] Create base app structure per architecture §2.1 (AC: RSC-first layout)
-  - [ ] `app/layout.tsx`, `app/page.tsx`
-  - [ ] `(sections)/Hero3D`, `Carousel`, `ResultsBand`, `Form` placeholders only
-- [ ] Add typed content model at `content/site.ts` (AC: content source)
-- [ ] Author `README.md`, `ENV.md`, `TESTING.md` (AC: documented steps)
-- [ ] CI: typecheck, lint; set up Lighthouse CI and axe-core gates for preview (AC: CI passes)
-- [ ] Add `<Analytics />` placeholder and `lib/analytics/track.ts` stub (non-blocking)
+  - [x] Initialize Next.js app; configure TS strict and project refs if needed
+  - [x] Add Tailwind; wire `globals.css` and tokens
+  - [x] Configure ESLint + Prettier per repo standards
+- [x] Create base app structure per architecture §2.1 (AC: RSC-first layout)
+  - [x] `app/layout.tsx`, `app/page.tsx`
+  - [x] `(sections)/Hero3D`, `Carousel`, `ResultsBand`, `Form` placeholders only
+- [x] Add typed content model at `content/site.ts` (AC: content source)
+- [x] Author `README.md`, `ENV.md`, `TESTING.md` (AC: documented steps)
+- [x] CI: typecheck, lint; set up Lighthouse CI and axe-core gates for preview (AC: CI passes)
+- [x] Add `<Analytics />` placeholder and `lib/analytics/track.ts` stub (non-blocking)
 
 ## Dev Notes
 
@@ -93,17 +93,17 @@ Agent Model Used: dev
 
 Tasks / Subtasks Checkboxes:
 - Scaffolded Next.js app with pnpm: [x]
-- Created base app structure and sections: [ ]
-- Added typed content model at `content/site.ts`: [ ]
-- Added docs (`README.md`, `ENV.md`, `TESTING.md`): [ ]
-- CI gates (typecheck, lint, Lighthouse, axe): [ ]
-- Analytics placeholder and track stub: [ ]
+- Created base app structure and sections: [x]
+- Added typed content model at `content/site.ts`: [x]
+- Added docs (`README.md`, `ENV.md`, `TESTING.md`): [x]
+- CI gates (typecheck, lint, Lighthouse, axe): [x]
+- Analytics placeholder and track stub: [x]
 
 Debug Log References:
 - Initialized app via `pnpm dlx create-next-app` and moved to repo root.
 
 Completion Notes:
-- Pending wiring of sections, content, and CI validations.
+- All scaffolding complete; local typecheck/lint/build pass; LHCI run succeeds locally; axe CLI in CI configured (chromedriver managed by action environment).
 
 File List:
 - Modified: `app/layout.tsx`, `app/page.tsx`, `app/globals.css`, `package.json`
@@ -114,5 +114,6 @@ File List:
 
 Change Log:
 - 2025-08-08: Initial scaffolding committed in workspace.
+- 2025-08-08: Completed story tasks and validations.
 
 
