--- a/docs/stories/1.2.create-content-model-and-sample-content.md
+++ b/docs/stories/1.2.create-content-model-and-sample-content.md
@@ -26,7 +26,7 @@ Approved
   - [x] Export `content` constant with `as const satisfies Content`
 - [x] Populate sample content values aligned with copy guidelines (headlines, blurbShort limits)
 - [x] Ensure `content.form` fields exist (`success`, `ctaPrimary`, `ctaSecondary`, `whatsappPrefill`)
-- [ ] Add notes in file header on editing workflow (authoring via PR → preview)
+- [x] Add notes in file header on editing workflow (authoring via PR → preview)
 - [x] Wire a basic import path to be used by `app/page.tsx` later (no runtime usage yet)
 
 ## Dev Notes
@@ -61,18 +61,20 @@ Tasks / Subtasks Checkboxes:
 - Content interfaces and tuple types defined: [x]
 - Sample content populated and form fields present: [x]
 - Import path wired: [x]
-- Authoring notes: [ ]
+- Authoring notes: [x]
 
 Debug Log References:
 - Implemented `content/site.ts` with strict tuples and `satisfies`.
+- Added authoring workflow notes at the top of `content/site.ts`.
 
 Completion Notes:
-- Pending authoring workflow notes in header comments.
+- All tasks completed; typecheck passes.
 
 File List:
-- Added: `content/site.ts`
+- Modified: `content/site.ts`
 
 Change Log:
 - 2025-08-08: Content model created.
+- 2025-08-08: Added authoring workflow notes; marked story complete.
 
 
