docs(story-1.3): record local build+render validation; ready for review

--- a/docs/stories/1.3.scaffold-app-structure-and-sections.md
+++ b/docs/stories/1.3.scaffold-app-structure-and-sections.md
@@ -49,6 +49,7 @@ Approved
 ## Testing
 - `pnpm dev` renders layout and placeholder sections without runtime errors.
 - `pnpm build` succeeds; no Client component imported unnecessarily into RSC boundaries. [Source: architecture/02-frontend-application-architecture.md#2.2]
+- Validation executed: homepage rendered expected content ("Neo Nova:" headline) under local server.
 
 ## Change Log
 | Date       | Version | Description                                      | Author |
@@ -69,6 +70,7 @@ Debug Log References:
 
 Completion Notes:
 - Sections are placeholders without heavy bundles; motion is deferred.
+- Build + render validation passed locally.
 
 File List:
 - Modified: `app/layout.tsx`, `app/page.tsx`, `app/globals.css`
