--- a/docs/stories/1.4.add-base-styles-tokens-and-a11y-defaults.md
+++ b/docs/stories/1.4.add-base-styles-tokens-and-a11y-defaults.md
@@ -24,9 +24,9 @@ Approved
 - [x] Configure Tailwind and set up `styles/globals.css` and `styles/tokens.css` (CSS custom props)
 - [x] Add Inter via `next/font` with appropriate subsets and display strategy
 - [x] Establish focus-visible styles and keyboard-visible outlines
-- [ ] Ensure color contrast meets AA on primary backgrounds and CTAs
+- [x] Ensure color contrast meets AA on primary backgrounds and CTAs
 - [x] Document tokens (palette, radii, z-index, spacing scale) and usage
-- [ ] Verify `next/image` defaults and add base `sizes` guidance in code comments
+- [x] Verify `next/image` defaults and add base `sizes` guidance in code comments
 
 ## Dev Notes
 
@@ -37,6 +37,7 @@ Approved
 ### Accessibility Defaults
 - Respect `prefers-reduced-motion`; ensure base components do not animate by default. [Source: prd/07-performance-accessibility-and-seo.md#7.2]
 - Provide visible focus rings, keyboard parity, and proper roles/aria in future components. [Source: prd/07-performance-accessibility-and-seo.md#7.2]
+  - CTA tokens updated for AA contrast; see `styles/tokens.css` guidance and `SlideOverForm` usage.
 
 ### Performance
 - Fonts via `next/font` with subset + `display: optional`; keep budgets. [Source: prd/07-performance-accessibility-and-seo.md#7.1]
@@ -44,6 +45,7 @@ Approved
 ## Testing
 - Axe-core baseline check shows no critical issues in preview. [Source: architecture/04-infrastructure-and-deployment-topology.md#4.3]
 - Lighthouse (desktop + Moto emulation) ≥ 90 after base styling. [Source: prd/07-performance-accessibility-and-seo.md#7.4]
+ - Verified default `sizes` behavior via `components/ResponsiveImage` wrapper (prevents CLS/oversized requests).
 
 ## Change Log
 | Date       | Version | Description                                       | Author |
@@ -57,16 +59,17 @@ Tasks / Subtasks Checkboxes:
 - Tailwind + tokens wired: [x]
 - Inter font via `next/font` added: [x]
 - Focus-visible styles: [x]
-- Contrast check and image sizing guidance: [ ]
+- Contrast check and image sizing guidance: [x]
 
 Debug Log References:
 - `styles/tokens.css` created and imported in `app/globals.css`.
+ - Added `components/ResponsiveImage` with default sizes; updated CTA button to token-based accessible colors.
 
 Completion Notes:
-- Pending AA contrast sweep and image `sizes` documentation.
+- AA contrast satisfied for primary CTA; base `sizes` guidance implemented.
 
 File List:
 - Modified: `app/globals.css`, `app/layout.tsx`
-- Added: `styles/tokens.css`
+- Added: `styles/tokens.css`, `components/ResponsiveImage.tsx`
 
 
