docs: add analytics and references to README; complete story 1.5 tasks

--- a/docs/stories/1.5.author-developer-docs.md
+++ b/docs/stories/1.5.author-developer-docs.md
@@ -24,8 +24,8 @@ Approved
 - [x] `README.md`: project overview, prerequisites, setup, scripts, deploy flow (Preview → Prod)
 - [x] `ENV.md`: document required env vars and where they are stored (Vercel Encrypted Env Vars)
 - [x] `TESTING.md`: local validation (typecheck, lint), preview checks (Lighthouse CI, axe-core), budgets
-- [ ] Note analytics events and where to find them in code (`lib/analytics/track.ts`)
-- [ ] Link to architecture docs and PRD sections for deeper context
+- [x] Note analytics events and where to find them in code (`lib/analytics/track.ts`)
+- [x] Link to architecture docs and PRD sections for deeper context
 
 ## Dev Notes
 
@@ -53,13 +53,14 @@ Agent Model Used: dev
 
 Tasks / Subtasks Checkboxes:
 - Docs authored (README/ENV/TESTING): [x]
-- Analytics docs and deep links: [ ]
+- Analytics docs and deep links: [x]
 
 Debug Log References:
 - README updated to reflect structure, validations, and CI gates.
+ - Added Analytics and References sections to README.
 
 Completion Notes:
-- Add analytics event notes in future story 5.x.
+- Docs now include analytics stub location and links to architecture/PRD.
 
 File List:
 - Modified: `README.md`
