ci: add bundle/3D payload budget guard and wire into CI; update story 1.6

--- a/docs/stories/1.6.configure-ci-gates.md
+++ b/docs/stories/1.6.configure-ci-gates.md
@@ -24,7 +24,7 @@ Approved
 - [x] Set up CI workflow to run `pnpm install && pnpm typecheck && pnpm lint`
 - [x] Integrate Lighthouse CI (desktop + Moto emulation) with Perf ≥ 90 threshold
 - [x] Add axe-core accessibility check with “no criticals” rule
-- [ ] Add bundle guard reporting (app shell JS gzip ≤ 140 KB; 3D payload report) to CI logs
+- [x] Add bundle guard reporting (app shell JS gzip ≤ 140 KB; 3D payload report) to CI logs
 - [ ] Mark checks as required for merges to `main`; allow override only with approval
 
 ## Dev Notes
@@ -53,16 +53,17 @@ Agent Model Used: dev
 Tasks / Subtasks Checkboxes:
 - CI base steps configured: [x]
 - Lighthouse and axe checks wired: [x]
-- Bundle/budget guard: [ ]
+- Bundle/budget guard: [x]
 - Branch protections: [ ]
 
 Debug Log References:
 - Added `.github/workflows/ci.yml`, `lighthouserc.json`.
+ - Implemented `scripts/check-budgets.mjs` and wired `pnpm ci:budgets` step in CI.
 
 Completion Notes:
-- Bundle guard scripts still needed; consider `nextjs-bundle-analysis` or custom report.
+- Bundle guard implemented (parses build output and scans 3D assets directories); branch protection to be configured in the repo settings.
 
 File List:
-- Added: `.github/workflows/ci.yml`, `lighthouserc.json`
+- Added: `.github/workflows/ci.yml`, `lighthouserc.json`, `scripts/check-budgets.mjs`
 
 
