feat(navbar): implement NavbarMinimal (RSC) wired to content + tests; update story 2.1

--- a/docs/stories/2.1.navbarminimal-rsc-wired-to-content-ctas.md
+++ b/docs/stories/2.1.navbarminimal-rsc-wired-to-content-ctas.md
@@ -22,12 +22,12 @@ Approved
 5. Sticky header ≤ 72px; never overlaps focus. [Source: prd/06-features.md#6.1]
 
 ## Tasks / Subtasks
-- [ ] Create `NavbarMinimal` as an RSC component
-  - [ ] Read `ctaPrimary` and `ctaSecondary` from `content.form`
-  - [ ] Provide `data-` hooks for analytics (click handlers will be wired later)
-  - [ ] Ensure sticky behavior with proper z-index token
-- [ ] Add keyboard/tab order and visible focus styles
-- [ ] Add unit snapshot to ensure CTAs render from content
+- [x] Create `NavbarMinimal` as an RSC component
+  - [x] Read `ctaPrimary` and `ctaSecondary` from `content.form`
+  - [x] Provide `data-` hooks for analytics (click handlers will be wired later)
+  - [x] Ensure sticky behavior with proper z-index token
+- [x] Add keyboard/tab order and visible focus styles
+- [x] Add unit snapshot to ensure CTAs render from content
 
 ## Dev Notes
 
@@ -42,9 +42,11 @@ Approved
 
 ### Accessibility
 - Keyboard-first, focus-visible rings. [Source: architecture/02-frontend-application-architecture.md#2.6; prd/07-performance-accessibility-and-seo.md#7.2]
+  - Uses `sticky` header at 64px; relies on `--nn-z-header` and `:focus-visible` baseline.
 
 ## Testing
 - Verify CTAs come from `content.form` via unit test.
+  - Implemented using Vitest + React Testing Library with a snapshot.
 - Manual a11y check: TAB order and visible focus.
 
 ## Change Log
@@ -53,6 +55,23 @@ Approved
 | 2025-08-08 | 0.1     | Draft for NavbarMinimal RSC created  | SM     |
 
 ## Dev Agent Record
-To be filled by the development agent during implementation.
+Agent Model Used: dev
+
+Tasks / Subtasks Checkboxes:
+- Navbar created and wired to content: [x]
+- Data hooks present and sticky header: [x]
+- Keyboard/focus styles: [x]
+- Unit test added: [x]
+
+Debug Log References:
+- Added `NavbarMinimal` and wired into `app/layout.tsx`.
+- Test at `app/(sections)/Navbar/NavbarMinimal.test.tsx` passes.
+
+Completion Notes:
+- Navbar kept RSC; analytics handlers to be added in later stories.
+
+File List:
+- Added: `app/(sections)/Navbar/NavbarMinimal.tsx`, `app/(sections)/Navbar/NavbarMinimal.test.tsx`
+- Modified: `app/layout.tsx`, `vitest.config.ts`, `vitest.setup.ts`, `package.json`
 
 
