feat(carousel): add CardCarousel (RSC), tests, and wire to page; complete story 2.2

--- a/docs/stories/2.2.carousel-wrapper-renders-3-cards.md
+++ b/docs/stories/2.2.carousel-wrapper-renders-3-cards.md
@@ -21,10 +21,10 @@ Approved
 4. Exactly 3 cards rendered from `content.cardsCore` in order. [Source: prd/05-content-and-information-architecture.md#5.3; prd/06-features.md#6.3]
 
 ## Tasks / Subtasks
-- [ ] Create `CardCarousel` RSC wrapper that accepts `[Card, Card, Card]`
-- [ ] Render minimal card shells (eyebrow, headline, blurbShort)
-- [ ] Provide keyboard focusable card containers; ENTER on CTA will be wired later
-- [ ] Ensure no client hooks or animation side-effects in this story
+- [x] Create `CardCarousel` RSC wrapper that accepts `[Card, Card, Card]`
+- [x] Render minimal card shells (eyebrow, headline, blurbShort)
+- [x] Provide keyboard focusable card containers; ENTER on CTA will be wired later
+- [x] Ensure no client hooks or animation side-effects in this story
 
 ## Dev Notes
 
@@ -38,7 +38,7 @@ Approved
 - Keyboard-focusable items; visible focus; no motion yet. [Source: prd/07-performance-accessibility-and-seo.md#7.2]
 
 ## Testing
-- Snapshot test confirms rendering of 3 items from content in order.
+- Snapshot/DOM test confirms rendering of 3 items from content in order.
 
 ## Change Log
 | Date       | Version | Description                                  | Author |
@@ -46,6 +46,23 @@ Approved
 | 2025-08-08 | 0.1     | Draft for Carousel wrapper (RSC) created     | SM     |
 
 ## Dev Agent Record
-To be filled by the development agent during implementation.
+Agent Model Used: dev
+
+Tasks / Subtasks Checkboxes:
+- RSC wrapper created and typed: [x]
+- Minimal shells and focusability: [x]
+- No client logic introduced: [x]
+- Unit test added: [x]
+
+Debug Log References:
+- Added `CardCarousel` and replaced `ClientCarousel` usage in `app/page.tsx`.
+- Test at `app/(sections)/Carousel/CardCarousel.test.tsx` passes.
+
+Completion Notes:
+- Client animation to come later in motion epic.
+
+File List:
+- Added: `app/(sections)/Carousel/CardCarousel.tsx`, `app/(sections)/Carousel/CardCarousel.test.tsx`
+- Modified: `app/page.tsx`
 
 
