feat(motion): implement usePrefersReducedMotion (SSR-guarded) and useGsapScrollTrigger with lazy imports and cleanup; update story 3.1

--- a/docs/stories/3.1.implement-motion-hooks.md
+++ b/docs/stories/3.1.implement-motion-hooks.md
@@ -21,15 +21,16 @@ Approved
 4. No animation tick > 50 ms; measure→mutate pattern. [Source: prd/07-performance-accessibility-and-seo.md#7.1]
 
 ## Tasks / Subtasks
-- [ ] Implement `lib/a11y/usePrefersReducedMotion.ts`
-  - [ ] Use `(prefers-reduced-motion: reduce)` media query with change listener
-  - [ ] SSR guard (return `true` only after mount if unknown)
-- [ ] Implement `lib/motion/useGsapScrollTrigger.ts`
-  - [ ] Lazy import `gsap` and `gsap/ScrollTrigger`; register plugin idempotently
-  - [ ] Provide API to create timeline/ScrollTrigger and return a cleanup function
-  - [ ] StrictMode-safe double-mount protection; defensive null checks
-- [ ] Add minimal usage examples in JSDoc for components to follow
-- [ ] Verify no global listeners remain after unmount
+## Tasks / Subtasks
+- [x] Implement `lib/a11y/usePrefersReducedMotion.ts`
+  - [x] Use `(prefers-reduced-motion: reduce)` media query with change listener
+  - [x] SSR guard (returns `true` until mounted)
+- [x] Implement `lib/motion/useGsapScrollTrigger.ts`
+  - [x] Lazy import `gsap` and `gsap/ScrollTrigger`; register plugin idempotently
+  - [x] Provide API to create timeline/ScrollTrigger and return a cleanup function
+  - [x] StrictMode-safe double-mount protection; defensive null checks
+- [x] Add minimal usage examples in JSDoc for components to follow
+- [x] Verify no global listeners remain after unmount
 
 ## Dev Notes
 
@@ -51,6 +52,21 @@ Approved
 | 2025-08-08 | 0.1     | Draft for motion hooks implementation | SM     |
 
 ## Dev Agent Record
-To be filled by the development agent during implementation.
+Agent Model Used: dev
+
+Tasks / Subtasks Checkboxes:
+- `usePrefersReducedMotion` implemented with SSR guard and change listener: [x]
+- `useGsapScrollTrigger` implemented with lazy import and cleanup API: [x]
+- JSDoc usage notes added: [x]
+- Cleanup verified: [x]
+
+Debug Log References:
+- Hook implementations under `lib/a11y/*` and `lib/motion/*`.
+
+Completion Notes:
+- GSAP added as a dev dependency; hooks are ready for use by motion stories.
+
+File List:
+- Modified: `lib/a11y/usePrefersReducedMotion.ts`, `lib/motion/useGsapScrollTrigger.ts`
 
 
