--- a/docs/stories/4.1.build-slideoverform-a11y.md
+++ b/docs/stories/4.1.build-slideoverform-a11y.md
@@ -7,14 +7,17 @@ owner: scrum-master
 # Story 4.1 — Build SlideOverForm with a11y (focus trap, aria-live, ESC close)
 
 ## Status
-Approved
+
+In Review
 
 ## Story
+
 **As a** developer,
 **I want** to implement a client SlideOverForm with proper accessibility (focus trap, aria-live, ESC to close),
 **so that** users can open and interact with the lead form accessibly and predictably before wiring the server action.
 
 ## Acceptance Criteria
+
 1. Focus is trapped within the slide-over when open; ESC closes the dialog. [Source: architecture/02-frontend-application-architecture.md#2.6]
 2. `aria-live="polite"` announces form submit success/error messages. [Source: architecture/02-frontend-application-architecture.md#2.6]
 3. Form fields: Name, Work Email, Company, WhatsApp (client-side Zod validation). [Source: architecture/03-backend-and-integrations.md#3.1]
@@ -22,34 +25,47 @@ Approved
 5. All copy pulled from `content/site.ts` where applicable (CTAs). [Source: prd/05-content-and-information-architecture.md#5.2]
 
 ## Tasks / Subtasks
-- [ ] Create `Form/SlideOverForm.tsx` (Client) with open/close state and focus trap
-- [ ] Add Zod schema for client pre-validation (same shape as server will use)
-- [ ] Add `aria-live` region for result messages; ensure announcements on state change
-- [ ] Wire header CTA buttons (from Navbar) to open the slide-over
-- [ ] Ensure visible focus rings and keyboard tab order
-- [ ] Provide a placeholder submit handler (no server action yet)
+
+- [x] Create `Form/SlideOverForm.tsx` (Client) with open/close state and focus trap
+- [x] Add Zod schema for client pre-validation (same shape as server will use)
+- [x] Add `aria-live` region for result messages; ensure announcements on state change
+- [x] Wire header CTA buttons (from Navbar) to open the slide-over
+- [x] Ensure visible focus rings and keyboard tab order
+- [x] Provide a placeholder submit handler (no server action yet)
 
 ## Dev Notes
 
 ### Accessibility Architecture
+
 - Focus trap, keyboard parity, `aria-live` messaging for form UI. [Source: architecture/02-frontend-application-architecture.md#2.6; prd/07-performance-accessibility-and-seo.md#7.2]
 
 ### Fields & Validation
+
 - Form fields and Zod validation alignment with server. [Source: architecture/03-backend-and-integrations.md#3.1]
 
 ### Content Integration
+
 - CTA labels read from `content.form`. [Source: prd/05-content-and-information-architecture.md#5.2]
 
 ## Testing
+
 - Keyboard-only walkthrough: open form via CTA, tab through fields, ESC to close.
 - Axe-core: no critical issues in preview for the slide-over.
 
+## Dev Agent Record
+
+- Implemented `NavCtaBridge` client bridge to keep `NavbarMinimal` as RSC while wiring CTA clicks via `data-analytics-event`.
+- Implemented `SlideOverForm` with focus trap, `role="dialog" aria-modal`, ESC close, and `aria-live` region for submit results.
+- Added Zod for client validation; fields: Name, Work Email, Company, WhatsApp.
+- Updated `app/page.tsx` to render `SlideOverForm` without props; labels pulled from `content.site`.
+- All tests passing; typecheck clean.
+
 ## Change Log
-| Date       | Version | Description                                  | Author |
-|------------|---------|----------------------------------------------|--------|
+
+| Date       | Version | Description                                   | Author |
+| ---------- | ------- | --------------------------------------------- | ------ |
 | 2025-08-08 | 0.1     | Draft for SlideOverForm accessibility created | SM     |
 
 ## Dev Agent Record
+
 To be filled by the development agent during implementation.
-
-
