docs(story): mark 5.1 analytics track helper In Review; check off tasks; add Dev Agent Record

--- a/docs/stories/5.1.implement-analytics-track-helper.md
+++ b/docs/stories/5.1.implement-analytics-track-helper.md
@@ -7,8 +7,7 @@ owner: scrum-master
 # Story 5.1 — Implement `lib/analytics/track.ts` per Architecture §2.9
 
 ## Status
-
-Approved
+In Review
 
 ## Story
 
@@ -25,10 +24,10 @@ Approved
 
 ## Tasks / Subtasks
 
-- [ ] Create `lib/analytics/track.ts` with `track(name: EventName, payload?: Record<string, unknown>)`
-- [ ] Export `EventName` union matching PRD §6.7
-- [ ] Implement dedupe mechanism (ref/WeakSet) for first-visibility events
-- [ ] Add no-op guard for SSR and missing analytics client
+- [x] Create `lib/analytics/track.ts` with `track(name: EventName, payload?: Record<string, unknown>)`
+- [x] Export `EventName` union matching PRD §6.7
+- [x] Implement dedupe mechanism (ref/WeakSet) for first-visibility events
+- [x] Add no-op guard for SSR and missing analytics client
 
 ## Dev Notes
 
@@ -44,6 +43,13 @@ Approved
 
 - Unit: calling `track` on server-side does nothing; client adds common fields.
 - Dedupe test: repeated visibility calls emit once.
+
+## Dev Agent Record
+- Implemented `EventName` union and `track(name, payload?)` with common fields `{ path, ts, deviceType }`.
+- Added dedupe for first-visibility events with scoped key (`name|path|section|id`).
+- Added safe shim for `window.va?.track` and SSR no-op guard.
+- Updated `NavCtaBridge` and `SlideOverForm` to use new signature.
+- Added `lib/analytics/track.test.ts` covering common fields and dedupe.
 
 ## Change Log
 
