feat(logs): add structured server logs for submitLead failures; docs(story): mark 5.3 In Review

--- a/docs/stories/5.3.add-server-logs-for-server-action-failures.md
+++ b/docs/stories/5.3.add-server-logs-for-server-action-failures.md
@@ -7,8 +7,7 @@ owner: scrum-master
 # Story 5.3 — Add server logs for Server Action failure path
 
 ## Status
-
-Approved
+In Review
 
 ## Story
 
@@ -23,9 +22,9 @@ Approved
 
 ## Tasks / Subtasks
 
-- [ ] In `submitLead`, on catch, log `{ errorClass, elapsedMs, path: 'submitLead' }`
-- [ ] Ensure logs visible in Vercel functions logs; optionally redact PII
-- [ ] Emit `form_submit_error` on client path as part of integration
+- [x] In `submitLead`, on catch, log `{ errorClass, elapsedMs, path: 'submitLead' }`
+- [x] Ensure logs visible in Vercel functions logs; optionally redact PII
+- [x] Emit `form_submit_error` on client path as part of integration
 
 ## Dev Notes
 
@@ -36,6 +35,10 @@ Approved
 ## Testing
 
 - Force error path (invalid env or simulated provider error) and verify log shape.
+
+## Dev Agent Record
+- Added structured logs in Resend catch, SMTP catch, and final delivery failure path with `{ path, provider, elapsedMs, errorClass }`.
+- Top-level catch also logs `{ path, provider: 'unknown', elapsedMs, errorClass }`.
 
 ## Change Log
 
